<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="50dp"
        tools:context=".ui.fragments.FilterApiCallResultsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/search_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/search"
                android:textColorHint="@color/text"
                android:background="@drawable/rounded_corner"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_button_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies"
                    android:textColor="@color/text"
                    android:buttonTint="@color/primary"/>

                <RadioButton
                    android:id="@+id/radio_button_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/series"
                    android:textColor="@color/text"
                    android:buttonTint="@color/primary"/>

                <RadioButton
                    android:id="@+id/radio_button_episode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/episode"
                    android:textColor="@color/text"
                    android:buttonTint="@color/primary"/>

                <RadioButton
                    android:id="@+id/radio_button_both"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/show_all"
                    android:textColor="@color/text"
                    android:buttonTint="@color/primary"/>
            </RadioGroup>

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_button"
                android:textColor="@color/text"
                android:backgroundTint="@color/white"
                android:elevation="10dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>