<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/white"
        android:padding="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner">
                <TextView
                    android:id="@+id/filter_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/filter_by_genre"
                    android:textColor="@color/text"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/spinner_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"/>

                <TextView
                    android:id="@+id/filter_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/filter_by_year"
                    android:textColor="@color/text"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/spinner_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/rounded_corner">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/sort_by"
                    android:textColor="@color/text"
                    android:textSize="16dp"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_button_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textColor="@color/text"
                        android:buttonTint="@color/primary"/>

                    <RadioButton
                        android:id="@+id/radio_button_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year_filter"
                        android:textColor="@color/text"
                        android:buttonTint="@color/primary"/>

                    <RadioButton
                        android:id="@+id/radio_button_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_filter"
                        android:textColor="@color/text"
                        android:buttonTint="@color/primary"
                        android:checked="true"/>
                </RadioGroup>
            </LinearLayout>
            <Button
                android:id="@+id/filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply_filters"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:elevation="10dp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>