<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.HomeFragment"
        android:id="@+id/homeFragment">

        <ImageView
            android:src="@drawable/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/search"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/browse_movies"
                android:textColor="@color/text" />

            <Button
                android:id="@+id/watchlist"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/my_watchlist"
                android:textColor="@color/text" />
            <Button
                android:id="@+id/poster_gallery"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/poster_gallery"
                android:textColor="@color/text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>